# libamtrs

./: .gitignore  AmtrsConfig.cmake  CMakeLists.txt  LICENSE  README-jp.md  README.ja.md  README.md  ReleaseNote.md  ReleaseNote.txt  libAmtrsConfig.cmake  libGFrameConfig.cmake  libPassionConfig.cmake  libTimerCoreConfig.cmake  template.app-console.cmake  template.app-gui.cmake
.experimentals/prj-tools/apgen/: CMakeLists.txt  apgen.hpp  build_and_copy.bat  download.cpp  main.cpp  nullmodule.cpp  update.cpp  zip.cpp
.experimentals/prj-tools/apgen/AndroidGradle/: AndroidGradle.apgen  AndroidGradle.cpp
.experimentals/prj-tools/apgen/download/: download.cpp
.experimentals/prj-tools/apgen/example/: AndroidGradle-APGen.txt
.experimentals/prj-tools/apgen/functions/: func_copy.cpp  func_dump.cpp  func_find.cpp  func_normalize_path.cpp  func_update.cpp  process_functions.cpp
.experimentals/prj-tools/apgen/skel/: skel.cpp
.experimentals/prj-tools/apgen/unzip/: unzip.cpp
.experimentals/prj-tools/inarikvs/: CMakeLists.txt  README.md  Tequnical.md  main.cpp
.experimentals/prj-tools/md5/: CMakeLists.txt  README-jp.md  md5.cpp
.experimentals/prj-tools/passion/: CMakeLists.txt  main.cpp
.experimentals/prj-tools/passion/test/: test-001.psn
.experimentals/src/amtrs/psnvm/: CMakeLists.txt  PREPROCESSOR.md  main.cpp
examples/001-helloworld/: CMakeLists.txt  main.cpp
src/amtrs/: CMakeLists.txt  allocator.c  base-console.cpp  base-filesystem-stdvfs.cpp  base-filesystem-util.cpp  base-g3d-vulkan.cpp  base-graphics-imagebuff.cpp  base-logging.cpp  base-optparse.cpp  base-scriptutil.cpp  base-stringbuf.c  base-system-process.cpp  base-tests.cpp  base-text-markdown.cpp  console.cpp  core.cpp  g3d-core.cpp  g3d.cpp  graphics-imagebuff.cpp  gui.cpp  lang-passion.cpp  logging.cpp  net.cpp  stringbuf.c  system.cpp  text-markdown.cpp  unixdrv-logging.cpp  unixdrv-system.cpp  win32-locale.cpp  win32-system.cpp
src/amtrs/.old/android/: android-api-android_app.hpp  android-api-cpu.hpp  android-api-opengl.hpp  android-billing-manager.hpp  android-chrono-datetime.hpp  android-chrono-time.hpp  android-filesystem-assetvfs.hpp  android-filesystem-filename.hpp  android-filesystem-functions.hpp  android-graphics-bitmap.hpp  android-graphics-font.hpp  android-input-keyboard.hpp  android-net-web.hpp  android-notification-alarm.hpp  android-system-env.hpp  android-window-window.hpp
src/amtrs/.old/base/: base-application.cpp  base-archive.cpp  base-console.cpp  base-filesystem-cascadevfs.cpp  base-filesystem-lar.cpp  base-filesystem-stdvfs.cpp  base-graphics-imagebuff.cpp  base-net.cpp  base-optparse.cpp  base-scriptutil.cpp  base-stringbuf.c  base-system-process.cpp  base-tests.cpp  base-text-markdown.cpp  base-window.cpp  net-http_parser.cpp
src/amtrs/.old/g3d-opengl/: g3d-opengl-devices_vertex.hpp
src/amtrs/.old/g3d-vulkan/: g3d-vulkan-api-attribute.hpp  g3d-vulkan-api-function_list.hpp  g3d-vulkan-api-ref.hpp  g3d-vulkan-api-to_string.hpp  g3d-vulkan-api-vkcommandbuffer.hpp  g3d-vulkan-api-vkdescriptorsetlayout.hpp  g3d-vulkan-api-vkfence.hpp  g3d-vulkan-api-vkimageview.hpp  g3d-vulkan-api-vkinstance.hpp  g3d-vulkan-api-vkpipelinecache.hpp  g3d-vulkan-api-vkqueue.hpp  g3d-vulkan-api-vkrect.hpp  g3d-vulkan-api-vkrenderpass.hpp  g3d-vulkan-api-vkswapchain.hpp  g3d-vulkan-vkconstants.hpp  g3d-vulkan-vkexecuter.hpp  g3d-vulkan-vkframebuffer.hpp  g3d-vulkan.hpp  (+4 more)
src/amtrs/console/: arguments.cxx  editline.cxx  terminal.cxx
src/amtrs/core/: errorval.cxx  io-reader.cxx  io-writer.cxx  string-format.cxx  string-multibyte.cxx  string-numeric.cxx  string-sourcecode.cxx  string-sstring.cxx  string-text.cxx  string-trnstext.cxx  string-wildcard.cxx  tests.cxx
src/amtrs/drv-android/: amtrs-console-terminal.cxx  amtrs-filesystem-enumfiles.cxx  amtrs-io-fdesc.cxx  amtrs-system-locale.cxx  amtrs-system.cxx  system.hpp
src/amtrs/drv-darwin/: amtrs-core-error.cxx  amtrs-core-string-convert.cxx  amtrs-filesystem-enumfiles.cxx  amtrs-system-locale.cxx  amtrs-system-log.cxx  amtrs-system-process.cxx  amtrs-system.cxx
src/amtrs/drv-unxlk/: amtrs-console-terminal.cxx  amtrs-core-error.cxx  amtrs-filesystem-enumfiles.cxx  amtrs-filesystem-path.cxx  amtrs-io-fdesc.cxx  amtrs-system-dynamic_library.cxx  amtrs-system-process.cxx  amtrs-system.cxx
src/amtrs/drv-win32/: amtrs-console-terminal.cxx  amtrs-core-error.cxx  amtrs-core-string-convert.cxx  amtrs-filesystem-enumfiles.cxx  amtrs-filesystem-path.cxx  amtrs-g3d-d3d12.cxx  amtrs-g3d-opengl.cxx  amtrs-g3d-vulkan.cxx  amtrs-g3d.cxx  amtrs-g3d.hpp  amtrs-gui-application.cxx  amtrs-gui-themes.cxx  amtrs-gui-window.cxx  amtrs-gui-window.hpp  amtrs-io-fdesc.cxx  amtrs-system-dynamic_library.cxx  amtrs-system-locale.cxx  amtrs-system-log.cxx  amtrs-system-process.cxx  amtrs-system.cxx  api-uxtheme.hpp  error.hpp
src/amtrs/g3d/: core.cxx  shader.cxx  shader_layout.cxx  shadermodule.cxx  uniform_layout.cxx  vulkan-to_string.cxx  vulkan.cxx
src/amtrs/graphics/: image-bmp.cxx
src/amtrs/lang-passion/: assembler.cxx  fcgi.cxx  parse-error.cxx  pfl.cxx  pflang_serialize_psnvm.cxx  pflang_serialize_vnode.cxx  pflnode.cxx  prepro.cxx  psn.cxx  pvlnode.cxx  validator-class.cxx  validator-function.cxx  validator-node.cxx  validator.cxx  vmachine.cxx
src/amtrs/net/: netbase.cxx  selector.cxx
src/amtrs/posix/: logging.cpp
src/amtrs/system/: filesystem-path.cxx  filesystem-util.cxx  io-fdesc.cxx  system-log.cxx  system-process.cxx  system-sleep.cxx
src/amtrs/win32/: locale.cpp  logging.cpp
src/tool-icpp/: CMakeLists.txt  arguments.cpp  build.cpp  icpp-wrap.hpp  icpp.hpp  main.cpp  setup-visualstudio.cpp  setup.cpp
tests/: CMakeLists.txt  chrono-time.cpp  crypto-hash.cpp  graphics-view2d.cpp  io-reader-writer.cpp  lang-lson.cpp  lang-passion-pfl.cpp  lang-passion-prepro.cpp  lang-passion-psn-error.cpp  lang-passion-psn.cpp  lang-passion-vm.cpp  main.cpp  memory-hash_map.cpp  memory-simplearray.cpp  memory-stackbuf.cpp  memory-view.cpp  string-shared_string.cpp  string-split_iterator.cpp  string-trnstext.cpp  string-wildcard.cpp  typeutil-eval_test.cpp
(+2706 files in other folders)
